--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">CheckingSystem</string>
+    <string name="app_name">StudentManager</string>
+    <string name="enter_username">学号</string>
+    <string name="enter_password">密码</string>
+    <string name="submit">登录</string>
 </resources>
