--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
-    <string name="app_name">StudentManager</string>
+    <string name="app_name">一考通</string>
     <string name="enter_username">学号</string>
     <string name="enter_password">密码</string>
     <string name="submit">登录</string>
+    <string name="choose_week">第一周</string>
+    <string name="please_choose">课表</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
