教师界面基本完善了

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="checking">考勤</string>
     <string name="AskForLeave">请假</string>
+    <string name="AskForLeaveInfo">请假信息</string>
 </resources>
