添加了教师开课和学生加入课程的功能，但是教师开课功能中文出现问题，暂时还未解决

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">一考通</string>
+    <string name="app_name">到了吗</string>
     <string name="enter_username">学号</string>
     <string name="enter_password">密码</string>
     <string name="submit">登录</string>
